# emo-classifier

./: .gitignore  .travis.yml  Dockerfile  README.md  buildspec.yml  dvc.yaml  main.py  pyproject.toml
.dvc/: config
data/: .gitignore  dev.parquet.dvc  goemotions_1.csv.dvc  goemotions_1.parquet.dvc  goemotions_2.csv.dvc  goemotions_2.parquet.dvc  goemotions_3.csv.dvc  goemotions_3.parquet.dvc  test.parquet.dvc  train.parquet.dvc
emo_classifier/: .gitignore  __init__.py  api.py  artifact.py  emotion.py  metrics.py  model.py  server.py  text.py
emo_classifier/classifiers/: __init__.py  embedding_bag.py  metrics.py  text.py  tfidf.py
emo_classifier/data/: .gitignore
emo_classifier/model/: __init__.py  tfidf.py
emo_classifier/resources/: .gitignore  DevMetrics.json  TestMetrics.json  Thresholds.json  TrainingMetrics.json
emo_classifier/resources/data/: TrainingMetrics.json
lib/: __init__.py  chart.py  evaluation.py  preprocessing.py
notebook/: .gitignore  error_analysis.ipynb
script/: ingestion.py  retrieve_data.py  server.py  train.py
test/emo_classifier/: test_artifact.py  test_classifier.py  test_load_classifier.py  test_metrics.py
test/integration/: test_api_server.py
training/: __init__.py  data_module.py  evaluation.py  pl_logger.py  preprocessing.py  train_embedding_bag.py  train_tfidf.py  utils.py  utils_for_sagemaker.py
