[tool.poetry]
name = "emo-classifier"
version = "0"
description = "Just a demonstration of a PyTorch project with goemotions data set"
authors = ["Hironori Sakai <crescent.lab@gmail.com>"]
license = "MIT License"
include = ["emo_classifier/data/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = {version = "~1.9.0", python = "~3.9", platform = "linux"}
torchtext = {version = "~0.10.0", python = "~3.9", platform = "linux"}
pytorch-lightning = "~1.4.9"
onnxruntime = "~1.9.0"
pandas = "~1.2.5"
scikit-learn = "~0.24.2"
scipy = "~1.7.0"
numpy = "~1.21.0"
spacy = ">=3.2.0,<3.3.0"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.2.0/en_core_web_md-3.2.0-py3-none-any.whl"}
fastapi = "~0.70.0"
uvicorn = {extras = ["standard"], version = "~0.15.0"}

[tool.poetry.dev-dependencies]
jupyterlab = "~3.0"
jupyterlab-code-formatter = "~1.4"
black = "^21.6b0"
isort = "^5.9.1"
jupytext = "~1.11"
jupyterlab-git = "~0.30"
jupyterlab-spellchecker = "~0.6"
jupyterlab-templates = "^0.3.1"
watermark = "^2.2.0"
altair = "^4.1.0"
jsonschema = ">=3.0,<4.0"
pyarrow = "^6.0.1"
pytest = "^6.2.5"
nbconvert = "^6.3.0"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test/emo_classifier"
]

[tool.poetry.scripts]
ingestion = "script.ingestion:start"
train = "script.train:start"
server = "emo_classifier.server:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
